# C-DataStructures-And-Algorithms

./: .README.md.un~  .gitignore  CMakeLists.txt  DirectedGraph.c  DirectedGraph.h  Doxyfile  HashSet.c  HashSet.h  LICENSE  README.md  TODOS  Trie.c  Trie.h  UndirectedGraph.c  UndirectedGraph.h  main.c  main2.c  main3.c
.github/workflows/: cmake.yml
Algorithms/ArraysAlg/Headers/: ArraysAlg.h  CharArrayAlg.h
Algorithms/ArraysAlg/Sources/: ArraysAlg.c  CharArrayAlg.c
Algorithms/ArraysAlgo/Headers/: ArraysAlg.h  CharArrayAlg.h
Algorithms/ArraysAlgo/Sources/: ArraysAlg.c  CharArrayAlg.c
Algorithms/IntegersAlg/Headers/: IntegerAlg.h
Algorithms/IntegersAlg/Sources/: IntegerAlg.c
Algorithms/Searching/Header/: JumpSearch.h  LinearSearch.h  SearchingAlg.h
Algorithms/Searching/Headers/: BinarySearch.h  ExponentialSearch.h  JumpSearch.h  LinearSearch.h  Searching.h  TernarySearch.h
Algorithms/Searching/Source/: BinarySearch.c  ExponentialSearch.c  JumpSearch.c  LinearSearch.c  SearchingAlg.c  TernarySearch.c
Algorithms/Searching/Sources/: BinarySearch.c  ExponentialSearch.c  JumpSearch.c  LinearSearch.c  TernarySearch.c
Algorithms/Sorting/: HeapSort.c  HeapSort.h  SortingAlg.c  SortingAlg.h
Algorithms/Sorting/Header/: CountingSort.h  MergeSort.h  SortingAlg.h  SwapFunction.h
Algorithms/Sorting/Headers/: BubbleSort.h  InsertionSort.h  MergeSort.h  QuickSort.h  SelectionSort.h  Sorting.h
Algorithms/Sorting/Source/: InsertionSort.c  SelectionSort.c  SortingAlg.c
Algorithms/Sorting/Sources/: BubbleSort.c  CountingSort.c  HeapSort.c  InsertionSort.c  MergeSort.c  QuickSort.c  SelectionSort.c  SwapFunction.c
DataStructure/Deque/Headers/: DLinkedListDeque.h  Deque.h
DataStructure/Deque/Sources/: DLinkedListDeque.c  Deque.c
DataStructure/Graphs/Headers/: DirectedGraph.h  UndirectedGraph.h
DataStructure/Graphs/Sources/: DirectedGraph.c  UndirectedGraph.c
DataStructure/LinkedLists/Headers/: DoublyLinkedList.h  LinkedList.h
DataStructure/LinkedLists/Sources/: DoublyLinkedList.c  LinkedList.c
DataStructure/Lists/Headers/: ArrayList.h  Set.h  Vector.h
DataStructure/Lists/Sources/: ArrayList.c  Set.c  Vector.c
DataStructure/Matrices/Headers/: Matrix.h
DataStructure/Matrices/Sources/: Matrix.c
DataStructure/Pairs/: Pair.c  Pair.h
DataStructure/Pairs/Headers/: Pair.h
DataStructure/Pairs/Sources/: Pair.c
DataStructure/Queues/: HPriorityQueue.c  HPriorityQueue.h
DataStructure/Queues/Headers/: ArrayQueue.h  HPriorityQueue.h  LinkedListQueue.h  PriorityQueue.h  Queue.h  StackQueue.h
DataStructure/Queues/Sources/: ArrayQueue.c  HPriorityQueue.c  LinkedListQueue.c  Queue.c  (+2 more)
Documentation/html/: _a_v_l_tree_8c.html  _a_v_l_tree_8c.js  _a_v_l_tree_8h.html  _a_v_l_tree_8h.js  _a_v_l_tree_8h_source.html  _array_deque_8c.html  _array_deque_8c.js  _array_deque_8h.html  _array_deque_8h.js  _array_deque_8h_source.html  _array_list_8c.html  _array_list_8c.js  _array_list_8h.html  _array_list_8h.js  _array_list_8h_source.html  _array_queue_8c.html  _array_queue_8c.js  _array_queue_8h.html  _array_queue_8h.js  _array_queue_8h_source.html  _binary_max_heap_8c.html  _binary_max_heap_8c.js  _binary_max_heap_8h.html  _binary_max_heap_8h.js  _binary_max_heap_8h_source.html  _binary_min_heap_8c.html  _binary_min_heap_8c.js  _binary_min_heap_8h.html  _binary_min_heap_8h.js  _binary_min_heap_8h_source.html  _binary_tree_8c.html  _binary_tree_8c.js  _binary_tree_8h.html  _binary_tree_8h.js  _binary_tree_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _d_linked_list_stack_8c.html  _d_linked_list_stack_8c.js  (+231 more)
Documentation/latex/: _a_v_l_tree_8c.tex  _a_v_l_tree_8h.tex  _array_deque_8c.tex  _array_deque_8h.tex  _array_list_8c.tex  _array_list_8h.tex  _array_queue_8c.tex  _array_queue_8h.tex  _binary_max_heap_8c.tex  _binary_max_heap_8h.tex  _binary_min_heap_8c.tex  _binary_min_heap_8h.tex  _binary_tree_8c.tex  _binary_tree_8h.tex  _c_make_c_compiler_id_8c.tex  _c_make_cache_8txt.tex  _c_make_lists_8txt.tex  _d_linked_list_stack_8c.tex  _d_linked_list_stack_8h.tex  _deque_8c.tex  _deque_8h.tex  _doubly_linked_list_8c.tex  _doubly_linked_list_8h.tex  _error_code_8h.tex  _hash_map_8c.tex  _hash_map_8h.tex  _heap_8c.tex  _heap_8h.tex  _linekd_list_hash_map_8c.tex  _linekd_list_hash_map_8h.tex  _linked_list_8c.tex  _linked_list_8h.tex  _linked_list_hash_map_8c.tex  _linked_list_hash_map_8h.tex  _linked_list_queue_8c.tex  _linked_list_queue_8h.tex  _priority_queue_8c.tex  _priority_queue_8h.tex  _queue_8c.tex  _queue_8h.tex  (+62 more)
Examples/: ArrayDeque.c  dequeExample.c  directedGraphExample.c
Files/: TxtFileLoader.c  TxtFileLoader.h  textFile.txt
Files/Headers/: InputScanner.h  TxtFileLoader.h
Files/Sources/: InputScanner.c  TxtFileLoader.c
FilesHandler/Headers/: InputScanner.h  TxtFileLoader.h
FilesHandler/Sources/: InputScanner.c  TxtFileLoader.c
Headers/: AVLTree.h  ArrayDeque.h  ArrayList.h  ArrayQueue.h  BinaryMaxHeap.h  BinaryMinHeap.h  BinaryTree.h  DLinkedListStack.h  Deque.h  DirectedGraph.h  DoublyLinkedList.h  ErrorCode.h  HashMap.h  HashSet.h  Heap.h  LinekdListHashMap.h  LinkedList.h  LinkedListHashMap.h  LinkedListQueue.h  MinHeap.h  PriorityQueue.h  Queue.h  RedBlackTree.h  SplayTree.h  Stack.h  StackQueue.h  String.h  Trie.h  Utils.h  Vector.h
NonWorkingImplementations/: ArrayDeque.c  ArrayDeque.h
Sources/: AVLTree.c  ArrayDeque.c  ArrayList.c  ArrayQueue.c  BinaryMaxHeap.c  BinaryMinHeap.c  BinaryTree.c  DLinkedListStack.c  Deque.c  DirectedGraph.c  DoublyLinkedList.c  HashMap.c  HashSet.c  Heap.c  LinekdListHashMap.c  LinkedList.c  LinkedListHashMap.c  LinkedListQueue.c  MinHeap.c  PriorityQueue.c  Queue.c  RedBlackTree.c  SplayTree.c  Stack.c  StackQueue.c  String.c  Trie.c  UndirectedGraph.c  Vector.c
System/: ErrorCode.h  Utils.h
Unit Test/: ErrorsTestStruct.h  testExample.c
Unit Test/CUnit-2.1-3/: aclocal.m4
Unit Test/CuTest/: AllTests.c  CuTest.c  CuTest.h  CuTestTest.c  README.txt  index.html  make-tests.sh  style.css
Unit Test/Tests/: Tests.c
UnitTest/: AllTests.c  VectorTest.c
(+276 files in other folders)
